--- a/qualitycheck.ui
+++ b/qualitycheck.ui
@@ -107,7 +107,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLineEdit" name="lineEdit"/>
+       <widget class="QLineEdit" name="dutNmse"/>
       </item>
      </layout>
     </widget>
